@@ -10,7 +10,8 @@ check_PROGRAMS = \
 	ol_lrc_fetch_module_test \
 	ol_path_test \
 	ol_utils_cmdline_test \
-	ol_fork_test
+	ol_fork_test \
+	ol_music_info_test
 
 INCLUDES = @GTK2_CFLAGS@ \
 	@DBUS_GLIB_CFLAGS@ \
@@ -142,6 +143,16 @@ ol_fork_test_SOURCES = \
 	ol_fork_test.c \
 	$(top_srcdir)/src/ol_fork.c
 ol_fork_test_LDADD = \
+	@CURL_LIBS@ \
+	@GTK2_LIBS@ \
+	@DBUS_GLIB_LIBS@ \
+	@GLADE_LIBS@
+
+ol_music_info_test_SOURCES = \
+	ol_music_info_test.c \
+	$(top_srcdir)/src/ol_music_info.c \
+	$(top_srcdir)/src/ol_utils.c
+ol_music_info_test_LDADD = \
 	@CURL_LIBS@ \
 	@GTK2_LIBS@ \
 	@DBUS_GLIB_LIBS@ \
